--- a/lilliput-0.1.0.html
+++ b/lilliput-0.1.0.html
@@ -11,7 +11,7 @@
 
 
 
-<link rel="canonical" href="/lilliput-0.1.0.html">
+<link rel="canonical" href="./lilliput-0.1.0.html">
 
         <meta name="author" content="nomed" />
         <meta name="keywords" content="micros,mymicros,res 3700,simphony,data warehouse,business intelligence,retail,food & beverage,business analitycs" />
@@ -21,16 +21,16 @@
     <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@inomed">
         <meta name="twitter:creator" content="@inomed">
-    <meta name="twitter:domain" content="">
+    <meta name="twitter:domain" content=".">
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="./theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="./theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="/theme/css/pygments/friendly.css" rel="stylesheet">
-    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
+    <link href="./theme/css/pygments/friendly.css" rel="stylesheet">
+    <link rel="stylesheet" href="./theme/css/style.css" type="text/css"/>
 
-        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
+        <link href="./feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
               title="Zeroisp - Lonely IT Consultant ATOM Feed"/>
 
 </head>
@@ -45,29 +45,29 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand">
+            <a href="./" class="navbar-brand">
 Zeroisp - Lonely IT Consultant            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                         <li><a href="/pages/about.html">
+                         <li><a href="./pages/about.html">
                              About Me
                           </a></li>
-                         <li><a href="/pages/projects.html">
+                         <li><a href="./pages/projects.html">
                              Projects
                           </a></li>
                         <li >
-                            <a href="/category/code.html">Code</a>
+                            <a href="./category/code.html">Code</a>
                         </li>
                         <li class="active">
-                            <a href="/category/lilliput.html">Lilliput</a>
+                            <a href="./category/lilliput.html">Lilliput</a>
                         </li>
                         <li >
-                            <a href="/category/misc.html">Misc</a>
+                            <a href="./category/misc.html">Misc</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
+                <li><a href="./archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -78,8 +78,8 @@ Zeroisp - Lonely IT Consultant            </a>
     <div class="row">
         <div class="col-sm-9">
             <ol class="breadcrumb">
-                <li><a href="" title="Zeroisp - Lonely IT Consultant"><i class="fa fa-home fa-lg"></i></a></li>
-                <li><a href="/category/lilliput.html" title="Lilliput">Lilliput</a></li>
+                <li><a href="." title="Zeroisp - Lonely IT Consultant"><i class="fa fa-home fa-lg"></i></a></li>
+                <li><a href="./category/lilliput.html" title="Lilliput">Lilliput</a></li>
                 <li class="active">Lilliput release 0.1.0</li>
             </ol>
 
@@ -87,7 +87,7 @@ Zeroisp - Lonely IT Consultant            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="/lilliput-0.1.0.html"
+                    <a href="./lilliput-0.1.0.html"
                        rel="bookmark"
                        title="Permalink to Lilliput release 0.1.0">
                         Lilliput release 0.1.0
@@ -106,23 +106,23 @@ Zeroisp - Lonely IT Consultant            </a>
 
 
 <span class="label label-default">Tags</span>
-	<a href="/tag/micros.html">micros</a>
+	<a href="./tag/micros.html">micros</a>
         /
-	<a href="/tag/mymicros.html">mymicros</a>
+	<a href="./tag/mymicros.html">mymicros</a>
         /
-	<a href="/tag/res-3700.html">res 3700</a>
+	<a href="./tag/res-3700.html">res 3700</a>
         /
-	<a href="/tag/simphony.html">simphony</a>
+	<a href="./tag/simphony.html">simphony</a>
         /
-	<a href="/tag/data-warehouse.html">data warehouse</a>
+	<a href="./tag/data-warehouse.html">data warehouse</a>
         /
-	<a href="/tag/business-intelligence.html">business intelligence</a>
+	<a href="./tag/business-intelligence.html">business intelligence</a>
         /
-	<a href="/tag/retail.html">retail</a>
+	<a href="./tag/retail.html">retail</a>
         /
-	<a href="/tag/food-beverage.html">food & beverage</a>
+	<a href="./tag/food-beverage.html">food & beverage</a>
         /
-	<a href="/tag/business-analitycs.html">business analitycs</a>
+	<a href="./tag/business-analitycs.html">business analitycs</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -340,7 +340,7 @@ The Data Warehouse is accessible and scalable, the principle is that
             var disqus_shortname = 'zeroisp'; // required: replace example with your forum shortname
 
                     var disqus_identifier = 'lilliput-0.1.0';
-                var disqus_url = '/lilliput-0.1.0.html';
+                var disqus_url = './lilliput-0.1.0.html';
 
             var disqus_config = function () {
                 this.language = "en";
@@ -388,80 +388,80 @@ The Data Warehouse is accessible and scalable, the principle is that
                 </li>
 
 
-                <li class="list-group-item"><a href="/"><h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Categories</span></h4></a>
+                <li class="list-group-item"><a href="./"><h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Categories</span></h4></a>
                     <ul class="list-group" id="categories">
                         <li class="list-group-item">
-                            <a href="/category/code.html">
+                            <a href="./category/code.html">
                                 <i class="fa fa-folder-open fa-lg"></i> Code
                             </a>
                         </li>
                         <li class="list-group-item">
-                            <a href="/category/lilliput.html">
+                            <a href="./category/lilliput.html">
                                 <i class="fa fa-folder-open fa-lg"></i> Lilliput
                             </a>
                         </li>
                         <li class="list-group-item">
-                            <a href="/category/misc.html">
+                            <a href="./category/misc.html">
                                 <i class="fa fa-folder-open fa-lg"></i> Misc
                             </a>
                         </li>
                     </ul>
                 </li>
 
-                <li class="list-group-item"><a href="/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
+                <li class="list-group-item"><a href="./"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                     <ul class="list-group list-inline tagcloud" id="tags">
                         <li class="list-group-item tag-4">
-                            <a href="/tag/business-analitycs.html">
+                            <a href="./tag/business-analitycs.html">
                                 business analitycs
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/business-intelligence.html">
+                            <a href="./tag/business-intelligence.html">
                                 business intelligence
                             </a>
                         </li>
                         <li class="list-group-item tag-1">
-                            <a href="/tag/code.html">
+                            <a href="./tag/code.html">
                                 Code
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/data-warehouse.html">
+                            <a href="./tag/data-warehouse.html">
                                 data warehouse
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/food-beverage.html">
+                            <a href="./tag/food-beverage.html">
                                 food & beverage
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/micros.html">
+                            <a href="./tag/micros.html">
                                 micros
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/mymicros.html">
+                            <a href="./tag/mymicros.html">
                                 mymicros
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/python.html">
+                            <a href="./tag/python.html">
                                 python
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/res-3700.html">
+                            <a href="./tag/res-3700.html">
                                 res 3700
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/retail.html">
+                            <a href="./tag/retail.html">
                                 retail
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/simphony.html">
+                            <a href="./tag/simphony.html">
                                 simphony
                             </a>
                         </li>
@@ -493,6 +493,36 @@ The Data Warehouse is accessible and scalable, the principle is that
             <h2>Github Activity</h2>
                <div class="row">
 
+                       <div class="col-xs-4" ><b>nomed pushed to gh-pages at nomed/nomed.github.io</b><br /> <!-- push -->
+<svg class="octicon octicon-git-commit dashboard-event-icon" height="32" version="1.1" viewBox="0 0 14 16" width="28" xmlns="http://www.w3.org/2000/svg"><path d="M10.86 7c-0.45-1.72-2-3-3.86-3s-3.41 1.28-3.86 3H0v2h3.14c0.45 1.72 2 3 3.86 3s3.41-1.28 3.86-3h3.14V7H10.86zM7 10.2c-1.22 0-2.2-0.98-2.2-2.2s0.98-2.2 2.2-2.2 2.2 0.98 2.2 2.2-0.98 2.2-2.2 2.2z"></path></svg>
+
+<div class="time">
+  May 15, 2016
+</div>
+
+<div class="title">
+  <a href="https://github.com/nomed">nomed</a> pushed to <a href="https://github.com/nomed/nomed.github.io/tree/gh-pages">gh-pages</a> at <a href="https://github.com/nomed/nomed.github.io">nomed/nomed.github.io</a>
+</div>
+
+<div class="details">
+  <a href="https://github.com/nomed"><img alt="@nomed" class="gravatar" height="30" src="https://avatars3.githubusercontent.com/u/241485?v=3&amp;s=60" width="30" /></a>
+
+    <div class="commits pusher-is-only-committer">
+      <ul>
+        <li>
+          <span title="nomed">
+            <img alt="@nomed" height="16" src="https://avatars2.githubusercontent.com/u/241485?v=3&amp;s=32" width="16" />
+          </span>
+          <code><a href="https://github.com/nomed/nomed.github.io/commit/e0d3a67e14a926ecf737fbf918a553eeb07e142e">e0d3a67</a></code>
+          <div class="message">
+            <blockquote>
+              Generate Pelican site
+            </blockquote>
+          </div>
+        </li>
+      </ul>
+    </div>
+</div></div>
                        <div class="col-xs-4" ><b>nomed pushed to master at nomed/nomed.github.io</b><br /> <!-- push -->
 <svg class="octicon octicon-git-commit dashboard-event-icon" height="32" version="1.1" viewBox="0 0 14 16" width="28" xmlns="http://www.w3.org/2000/svg"><path d="M10.86 7c-0.45-1.72-2-3-3.86-3s-3.41 1.28-3.86 3H0v2h3.14c0.45 1.72 2 3 3.86 3s3.41-1.28 3.86-3h3.14V7H10.86zM7 10.2c-1.22 0-2.2-0.98-2.2-2.2s0.98-2.2 2.2-2.2 2.2 0.98 2.2 2.2-0.98 2.2-2.2 2.2z"></path></svg>
 
@@ -684,48 +714,6 @@ The Data Warehouse is accessible and scalable, the principle is that
       </div>
   </div>
 </div></div>
-                       <div class="col-xs-4" ><b>nomed pushed to master at nomed/lilliput</b><br /> <!-- push -->
-<svg class="octicon octicon-git-commit dashboard-event-icon" height="32" version="1.1" viewBox="0 0 14 16" width="28" xmlns="http://www.w3.org/2000/svg"><path d="M10.86 7c-0.45-1.72-2-3-3.86-3s-3.41 1.28-3.86 3H0v2h3.14c0.45 1.72 2 3 3.86 3s3.41-1.28 3.86-3h3.14V7H10.86zM7 10.2c-1.22 0-2.2-0.98-2.2-2.2s0.98-2.2 2.2-2.2 2.2 0.98 2.2 2.2-0.98 2.2-2.2 2.2z"></path></svg>
-
-<div class="time">
-  May 14, 2016
-</div>
-
-<div class="title">
-  <a href="https://github.com/nomed">nomed</a> pushed to <a href="https://github.com/nomed/lilliput/tree/master">master</a> at <a href="https://github.com/nomed/lilliput">nomed/lilliput</a>
-</div>
-
-<div class="details">
-  <a href="https://github.com/nomed"><img alt="@nomed" class="gravatar" height="30" src="https://avatars3.githubusercontent.com/u/241485?v=3&amp;s=60" width="30" /></a>
-
-    <div class="commits pusher-is-only-committer">
-      <ul>
-        <li>
-          <span title="nomed">
-            <img alt="@nomed" height="16" src="https://avatars2.githubusercontent.com/u/241485?v=3&amp;s=32" width="16" />
-          </span>
-          <code><a href="https://github.com/nomed/lilliput/commit/91791dcb016aa5dc767eadbf6d19cd232d7fa714">91791dc</a></code>
-          <div class="message">
-            <blockquote>
-              Merge pull request #15 from nomed/simphony
-            </blockquote>
-          </div>
-        </li>
-        <li>
-          <span title="nomed">
-            <img alt="@nomed" height="16" src="https://avatars2.githubusercontent.com/u/241485?v=3&amp;s=32" width="16" />
-          </span>
-          <code><a href="https://github.com/nomed/lilliput/commit/b9c484106610e7a329d56fc309677a30e0697226">b9c4841</a></code>
-          <div class="message">
-            <blockquote>
-              add improt cogs
-            </blockquote>
-          </div>
-        </li>
-        <li class="more"><a href="https://github.com/nomed/lilliput/compare/08713411c6...91791dcb01">1 more commit &raquo;</a></li>
-      </ul>
-    </div>
-</div></div>
                </div><!-- /.github_activity -->
          </div>
 
@@ -741,13 +729,13 @@ The Data Warehouse is accessible and scalable, the principle is that
       </div>
    </div>
 </footer>
-<script src="/theme/js/jquery.min.js"></script>
+<script src="./theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/theme/js/bootstrap.min.js"></script>
+<script src="./theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="/theme/js/respond.min.js"></script>
+<script src="./theme/js/respond.min.js"></script>
 
     <!-- GitHub JS -->
     <script type="text/javascript">
@@ -755,7 +743,7 @@ The Data Warehouse is accessible and scalable, the principle is that
             if (!window.jXHR) {
                 var jxhr = document.createElement('script');
                 jxhr.type = 'text/javascript';
-                jxhr.src = '/theme/js/jXHR.js';
+                jxhr.src = './theme/js/jXHR.js';
                 var s = document.getElementsByTagName('script')[0];
                 s.parentNode.insertBefore(jxhr, s);
             }
@@ -768,7 +756,7 @@ The Data Warehouse is accessible and scalable, the principle is that
             });
         });
     </script>
-    <script src="/theme/js/github.js" type="text/javascript"></script>
+    <script src="./theme/js/github.js" type="text/javascript"></script>
     <!-- End GitHub JS Code -->
     <!-- Disqus -->
     <script type="text/javascript">
